# klay

./: .gitignore  magic_eight_ball.py  package-lock.json  package.json  tailwind.config.js
backend/: __init__.py  main.py
modes/: coding.md  creative.md  reasoning.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  files.rs  mod.rs  modes.rs
src/lib/: App.svelte  types.ts
src/lib/components/canvas/: IdeaBoard.svelte  ImageEditor.svelte
src/lib/components/chat/: MarkdownRenderer.svelte
src/lib/components/layout/: FileExplorer.svelte  FileTreeNode.svelte  Sidebar.svelte  ThinkingBar.svelte  Workspace.svelte
src/lib/components/onboarding/: OnboardingWizard.svelte
src/lib/components/panels/: ComputerControl.svelte  MemoryGraph.svelte
src/lib/components/settings/: ApiConfigModal.svelte
src/lib/services/: api.ts
src/lib/stores/: files.ts  modes.ts  settings.ts  workspace.ts
src/lib/styles/: app.css
src/routes/: +page.svelte
